# cpp-consumer

./: .gitignore  CMakeLists.txt  README
helpers/: CMakeFeatures.rd
include/: producer.hpp
recipes/: cpp-consumer_1.0.bb
src/: cpp-maindemo.cpp  producer.cpp
